--- a/contract.fastbuka.com/contracts/fast_buka/Cargo.toml
+++ b/contract.fastbuka.com/contracts/fast_buka/Cargo.toml
@@ -10,6 +10,8 @@ doctest = false
 
 [dependencies]
 soroban-sdk = { workspace = true }
+soroban-token-sdk = { workspace = true }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
+soroban-token-sdk = { workspace = true }
